projects/search-engine-for-typesense/v30/guidebook-searching-filtering.mdx
---
title: "Searching and filtering"
description: "Query, filter, paginate, and select fields with the Relation DSL."
---

Related: <a href="/projects/search-engine-for-typesense/v30/relation">Relation</a>, <a href="/projects/search-engine-for-typesense/v30/query-dsl">Query DSL</a>, <a href="/projects/search-engine-for-typesense/v30/field-selection">Field Selection</a>, <a href="/projects/search-engine-for-typesense/v30/relation-reference">Relation Guide</a>, <a href="/projects/search-engine-for-typesense/v30/highlighting">Highlighting</a>, <a href="/projects/search-engine-for-typesense/v30/ranking">Ranking</a>

Use this page when you need to search and filter data from a collection.

<Note>
  Examples assume the <code>SearchEngine::Book</code> model from <a href="/projects/search-engine-for-typesense/v30/guidebook-model-configuration">Model configuration</a>.
</Note>

## Basic search

```ruby
SearchEngine::Book
  .search("running shoes")
  .order(price: :asc)
  .page(1)
  .per(20)
  .to_a
```

## Filtering patterns

```ruby
SearchEngine::Book.where(publisher_id: "publisher_1", tags: ["sale", "new"])
SearchEngine::Book.where(["price >= ?", 100])
SearchEngine::Book.where("price:>=100 && tags:=[\"sale\"]")
SearchEngine::Book.where.not(status: "archived")
```

<Note>
  Joined filters require <code>.joins(:assoc)</code> first. See <a href="/projects/search-engine-for-typesense/v30/guidebook-joins-relations">JOINs and relations</a>.
</Note>

## Select only what you need

```ruby
SearchEngine::Book
  .include_fields(:sku, :name, :price)
  .exclude(:internal_notes)
```

## Pagination and limits

```ruby
SearchEngine::Book.page(2).per(25)
SearchEngine::Book.limit(50) # fallback when page/per are not set
```

## Geo filtering

```ruby
SearchEngine::Venue
  .where_geo(:location, within_radius: { lat: 54.69, lng: 25.28, radius: "10 km" })
  .order_geo(:location, from: { lat: 54.69, lng: 25.28 })
  .to_a
```

<Note>
  Requires a <code>:geopoint</code> attribute. See <a href="/projects/search-engine-for-typesense/v30/geo-search">Geo Search</a> for polygon filters, viewport boost, and <code>geo_distance_meters</code>.
</Note>

## Next steps

- Build advanced predicates in <a href="/projects/search-engine-for-typesense/v30/query-dsl">Query DSL</a>.
- Tune ranking and highlights in <a href="/projects/search-engine-for-typesense/v30/ranking">Ranking</a> and <a href="/projects/search-engine-for-typesense/v30/highlighting">Highlighting</a>.
